# fastapi-admin-pane

./: .gitignore  pyproject.toml
adminpane/: script.py
public/asset/javascripts/: login.js
public/asset/styles/: global.css
public/templates/: admin.html  base.html  login.html  navbar.html
src/: __init__.py  app.py  modules.py
src/config/: auth_config.py  config.py  db_config.py  utils_config.py
src/endpoints/: admin.py  modules.py  user.py
src/handler/: modules.py  user.py
src/models/: model.py  modules.py
src/routes/: admin.py  modules.py  user.py
src/schemas/: user.py
tests/: test_app.py
