[tool.poetry]
name = "adminpane"
version = "0.1.0"
description = ""
authors = ["bagussr <bagusssyamsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
psycopg2 = "^2.9.4"
fastapi-jwt-auth = "^0.5.0"
alembic = "^1.8.1"
python-dotenv = "^0.21.0"
sqlalchemy = "^1.4.42"
bcrypt = "^4.0.1"
python-multipart = "^0.0.5"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
uvicorn = "^0.19.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
start = "adminpane.script:start"
alembic = "adminpane.script:alembic"
makemigration = "adminpane.script:makemigration"
migration = "adminpane.script:migration"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
